--- a/BookDB/.classpath
+++ b/BookDB/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="libs"/>
+	<classpathentry kind="src" path="xml_docs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="libs/mysql-connector-java-6.0.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
